# MS-office-installer-Qt

./: .clang-format  .gitignore  CMakeLists.txt  ConfigGenerator.cpp  ConfigGenerator.hpp  MS-office-installer_it_IT.ts  OfficeDeploymentTool.cpp  OfficeDeploymentTool.h  OfficeDeploymentTool.hpp  README.md  example.xml  installer.cpp  installer.h  installer.ui  main.cpp
doc/: Doxyfile
res/: contents.json
src/: ConfigGenerator.cpp  ConfigGenerator.hpp  DataModel.hpp  Installer.cpp  Installer.hpp  Installer.ui  OfficeDeploymentTool.cpp  OfficeDeploymentTool.hpp  installer.cpp  installer.hpp  installer.ui  languageSelector.cpp  languageSelector.hpp  languageSelector.ui
src/ConfigGenerator/: ConfigGenerator.hpp
src/Installer/: Installer.cpp  Installer.hpp
src/LanguageSelector/: LanguageSelector.cpp  LanguageSelector.hpp  LanguageSelector.ui
src/OfficeDeploymentTool/: OfficeDeploymentTool.cpp  OfficeDeploymentTool.hpp
test/: ConfigGenerator_Test.cpp
translations/: MS-office-installer_it_IT.ts
